--- a/postresemana.html
+++ b/postresemana.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Postre de la semana</h1>
     <h2>Boniatos a la mallorquina</h2>
-    <p>Comensales: 4 personas</p>
-    <p>Tiempo de preparación: 15 minutos</p>
-    <p>Tiempo de cocción: 25 minutos</p>
+    <p> <span class="texto-blue">Comensales:</span> 4 personas</p>
+    <p><span class="texto-blue">Tiempo de preparación:</span> 15 minutos</p>
+    <p><span class="texto-blue">Tiempo de cocción:</span> 25 minutos</p>
     <h5>Ingredientes</h5>
     <p>1 kg de boniatos</p>
     <p>1/4 litro de miel</p>
